--- a/src/app/styles/_globals.scss
+++ b/src/app/styles/_globals.scss
@@ -4,6 +4,7 @@ body {
   line-height: 1.28;
   color: var(--color-light);
   background: linear-gradient(270deg, rgba(7, 7, 7, 0.98) 0%, rgba(20, 20, 20, 0.98) 100%), url("/public/background.png") no-repeat center;
+  background-size: cover;
 }
 
 a,
