--- a/src/app/styles/_globals.scss
+++ b/src/app/styles/_globals.scss
@@ -6,7 +6,12 @@ body {
   background: linear-gradient(270deg, rgba(7, 7, 7, 0.98) 0%, rgba(20, 20, 20, 0.98) 100%), url("/background.png") no-repeat center;
   background-size: cover;
 }
-
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  flex: 1
+}
 a,
 button,
 input,
