--- a/src/entities/goods/ui/ProductComponent/ProductComponent.module.scss
+++ b/src/entities/goods/ui/ProductComponent/ProductComponent.module.scss
@@ -1,17 +1,39 @@
 .product {
   padding: 32px;
+  position: relative;
   display: flex;
   align-items: center;
   flex-direction: column;
   background: linear-gradient(93.07deg, rgba(255, 255, 255, 0.06) 0%, rgba(153, 153, 153, 0.048) 100%);
   border-radius: var(--border-radius-large);
   min-width: 0;
-
+  border: 1px solid transparent;
+  transition: border-color 2s ease;
+  overflow:  hidden;
+  &:after {
+    content: '';
+    position: absolute;
+    transition: opacity 1s ease;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    opacity: 0;
+  }
   &--selected {
     border: 1px solid #029BFF;
-    background: linear-gradient(93.07deg, rgba(255, 255, 255, 0.06) 0%, rgba(153, 153, 153, 0.048) 100%), linear-gradient(180deg, rgba(2, 155, 255, 0) 0%, rgba(2, 155, 255, 0.3) 100%);
     > .productPrice {
       color: var(--color-accent-2);
+    }
+    &:after {
+      content: '';
+      position: absolute;
+      opacity: 1;
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      background: linear-gradient(93.07deg, rgba(255, 255, 255, 0.06) 0%, rgba(153, 153, 153, 0.048) 100%), linear-gradient(180deg, rgba(2, 155, 255, 0) 0%, rgba(2, 155, 255, 0.3) 100%);
     }
   }
 }
