--- a/src/widgets/TheMain/ui/ProductList/ProductList.module.scss
+++ b/src/widgets/TheMain/ui/ProductList/ProductList.module.scss
@@ -6,7 +6,7 @@
 }
 .product {
   opacity: 1;
-  transition: opacity 1s;
+  transition: opacity ,border-color,  1s ;
   cursor: pointer;
 }
 @starting-style {
