--- a/src/widgets/TheMain/ui/TheMain/TheMain.module.scss
+++ b/src/widgets/TheMain/ui/TheMain/TheMain.module.scss
@@ -1,15 +1,22 @@
 @import '@/app/styles/mixins';
-.main-container {}
-
+.main-container {
+  width: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
 .main {
   display: flex;
+  flex: 1;
   flex-direction: row;
   gap: 50px;
+  padding-bottom: 50px;
 }
 .main-info {}
 .main-products {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   gap: 30px;
   width: 100%;
   text-align: center;
